[gd_scene load_steps=24 format=3 uid="uid://cvcsio6dm1pv8"]

[ext_resource type="Script" uid="uid://4fd4rvqb6t6r" path="res://Scenes/Games/Zelda/ZeldaPlayer.gd" id="1_21olf"]
[ext_resource type="Texture2D" uid="uid://ci7awt5dj3p1w" path="res://GFX/Zoria Tileset/player.png" id="2_x1xla"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_21olf"]
size = Vector2(24, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_pn86b"]
atlas = ExtResource("2_x1xla")
region = Rect2(0, 0, 216, 144)

[sub_resource type="Animation" id="Animation_pn86b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_5esxn"]
resource_name = "die"
length = 2.0000033
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.39999998, 0.5, 0.6, 0.6999999, 0.79917866, 0.8991787, 0.99917865, 1.0991787, 1.2003204, 1.6666666, 1.8666667, 1.9333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 6, 12, 18, 0, 6, 12, 18, 0, 6, 12, 18, 0, 17, 23, 11]
}

[sub_resource type="Animation" id="Animation_5pxh4"]
resource_name = "enter"
length = 1.5000035
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.23333333, 0.46666667, 0.70000005, 0.93333334, 1.1666666, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 13, 14, 13, 14, 13, 14, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 32)]
}

[sub_resource type="Animation" id="Animation_rxg8s"]
resource_name = "enter"
length = 1.5000035
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.23333333, 0.46666667, 0.70000005, 0.93333334, 1.1666666, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 1, 2, 1, 2, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [-1, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 32), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_evg5b"]
resource_name = "get_item"
length = 0.03333667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_x1xla"]
resource_name = "idle_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.033333335),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_jb35f"]
resource_name = "idle_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.033333335),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_o8ov7"]
resource_name = "idle_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.033333335),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_g2k71"]
resource_name = "idle_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.033333335),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_l75xr"]
resource_name = "slash_down"
length = 0.16667001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 4]
}

[sub_resource type="Animation" id="Animation_2voen"]
resource_name = "slash_down"
length = 0.16667001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [9, 10]
}

[sub_resource type="Animation" id="Animation_cgg7l"]
resource_name = "slash_down"
length = 0.16667001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [21, 22]
}

[sub_resource type="Animation" id="Animation_rtsf1"]
resource_name = "slash_down"
length = 0.16667001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [15, 16]
}

[sub_resource type="Animation" id="Animation_08dwa"]
resource_name = "walk_down"
length = 0.50000334
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.23333335),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 2]
}

[sub_resource type="Animation" id="Animation_hml3m"]
resource_name = "walk_down"
length = 0.50000334
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.23333335),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [7, 8]
}

[sub_resource type="Animation" id="Animation_am66d"]
resource_name = "walk_down"
length = 0.50000334
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.23333335),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [19, 20]
}

[sub_resource type="Animation" id="Animation_cipf7"]
resource_name = "walk_down"
length = 0.50000334
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.23333335),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [13, 14]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_evg5b"]
_data = {
&"RESET": SubResource("Animation_pn86b"),
&"die": SubResource("Animation_5esxn"),
&"enter": SubResource("Animation_5pxh4"),
&"exit": SubResource("Animation_rxg8s"),
&"get_item": SubResource("Animation_evg5b"),
&"idle_down": SubResource("Animation_x1xla"),
&"idle_left": SubResource("Animation_jb35f"),
&"idle_right": SubResource("Animation_o8ov7"),
&"idle_up": SubResource("Animation_g2k71"),
&"slash_down": SubResource("Animation_l75xr"),
&"slash_left": SubResource("Animation_2voen"),
&"slash_right": SubResource("Animation_cgg7l"),
&"slash_up": SubResource("Animation_rtsf1"),
&"walk_down": SubResource("Animation_08dwa"),
&"walk_left": SubResource("Animation_hml3m"),
&"walk_right": SubResource("Animation_am66d"),
&"walk_up": SubResource("Animation_cipf7")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x1xla"]
size = Vector2(24, 28)

[node name="ZeldaPlayer" type="CharacterBody2D"]
z_index = 1
collision_layer = 65
collision_mask = 65
script = ExtResource("1_21olf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_21olf")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_pn86b")
hframes = 6
vframes = 4
region_enabled = true
region_rect = Rect2(0, 0, 216, 144)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_evg5b")
}

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 516
collision_mask = 516

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_x1xla")

[node name="Itembox" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Itembox"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_x1xla")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="area_entered" from="Itembox" to="." method="_on_itembox_area_entered"]
